--- a/wallet-api/tsconfig.json
+++ b/wallet-api/tsconfig.json
@@ -15,6 +15,7 @@
     "emitDecoratorMetadata": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "resolveJsonModule": true,
   }
 }
